# erprus

./: .env  Cargo.toml  README.md
public/css/: compra.css  layout.css
public/js/: caja.js  compra_form .js  precio.js  precio_list.js  producto.js  producto_list.js  venta_form.js
public/js/modulos/: detallecv.js  nested.ts  select.ts
src/: main.rs
src/controllers/: caja.rs  cajero.rs  capitulo.rs  categoria.rs  categoriamarca.rs  compra.rs  db.rs  empleado.rs  marca.rs  mod.rs  precio.rs  producto.rs  unidad.rs  vendido.rs  venta.rs
src/handlers/: caja.rs  cajero.rs  capitulo.rs  categoria.rs  categoriamarca.rs  compra.rs  comprado.rs  empleado.rs  marca.rs  mod.rs  precio.rs  producto.rs  unidad.rs  vendido.rs  venta.rs
src/models/: caja.rs  cajero.rs  capitulo.rs  categoria.rs  categoriamarca.rs  compra.rs  comprado.rs  empleado.rs  marca.rs  mod.rs  parametros_list.rs  precio.rs  producto.rs  unidad.rs  vendido.rs  venta.rs
src/views/: caja.rs  cajero.rs  capitulo.rs  categoria.rs  categoriamarca.rs  compra.rs  empleado.rs  layout.rs  marca.rs  mod.rs  precio.rs  producto.rs  unidad.rs  vendido.rs  venta.rs
