
[package]
name = "erprus"
version = "0.1.0"
authors = ["Favio Yañiquez <fyaniquez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
http-types = "2.12.0"
maud = "0.22.2"
oauth2 = {version = "4.0.0", features = ["reqwest"], default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.66"
serde_qs = "0.8.3"
sqlx = { version = "0.5.5", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres"] }
surf = "2.2.0"
tide = "0.16.0"
